Lib import markdown

--- a/data_modeling_project.ipynb
+++ b/data_modeling_project.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import psycopg2\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -29,11 +30,11 @@
     "    conn.set_session(autocommit=True)\n",
     "    cur = conn.cursor()\n",
     "\n",
-    "    # creating new database named accounts\n",
+    "    # creating a new database named accounts\n",
     "    cur.execute(\"DROP DATABASE IF EXISTS accounts\")\n",
     "    cur.execute(\"CREATE DATABASE accounts\")\n",
     "\n",
-    "    # close connection to the default dabase\n",
+    "    # close connection to the default database\n",
     "    conn.close()\n",
     "\n",
     "    # connection to the new database\n",
@@ -1695,8 +1696,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# Create a copy of the DataFrame\n",
     "short_name_counts_copy = short_name_counts.copy()\n",
     "\n",
