--- a/data_modeling_project.ipynb
+++ b/data_modeling_project.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Libraries import"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
